# agent_project

./: pyproject.toml
crewAI/: pyproject.toml
crewAI/latest_ai_flow/: README.md  pyproject.toml
crewAI/latest_ai_flow/output/: post.md
crewAI/latest_ai_flow/src/latest_ai_flow/: main.py
crewAI/latest_ai_flow/src/latest_ai_flow/crews/content_crew/config/: agents.yaml  tasks.yaml
helloAgent/: .env  pyproject.toml  readme.md
helloAgent/Chapter2/: demo2.2.3.py
helloAgent/Chapter4/: Plan_and_solve.py  ReAct.py  Reflection.py  llm_client.py  tools.py
helloAgent/Chapter6/: Dialogue_system.py
helloAgent/first_demo/: main.py
