[project]
name = "latest_ai_flow"
version = "0.1.0"
description = "latest-ai-flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
kickoff = "latest_ai_flow.main:kickoff"
run_crew = "latest_ai_flow.main:kickoff"
plot = "latest_ai_flow.main:plot"
run_with_trigger = "latest_ai_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
